--- a/jasper.html
+++ b/jasper.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Student Portal</title>
-  <meta name="description" content="Student Timothy's personal learning portal with subject links." />
+  <meta name="description" content="Student Jasper's personal learning portal with subject links." />
   <style>
     :root{
       --bg-start:#0b1e3a;
