--- a/Haysten.html
+++ b/Haysten.html
@@ -111,6 +111,7 @@
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
+       <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
       <a class="subject" href="https://example.com/chemistry" target="_blank" rel="noopener">Biology</a>
       <a class="subject" href="https://example.com/physics" target="_blank" rel="noopener">Physics</a>
       <!-- Added extra subjects -->
