--- a/biomcquiz.html
+++ b/biomcquiz.html
@@ -54,11 +54,11 @@
   </style>
 </head>
 <body>
-  <h1>Biology MC Quiz — Mega</h1>
+  <h1>Biology MC Quiz </h1>
   <div id="controls">
     <label for="categoryFilter">分類：</label>
     <select id="categoryFilter" aria-label="Category filter">
-      <option value="all" selected>全部</option>
+      <option value="all" selected>All topic</option>
       <option value="Cell biology">Cell biology</option>
       <option value="Organisation">Organisation</option>
       <option value="Infection and response">Infection and response</option>
