--- a/biomcquiz.html
+++ b/biomcquiz.html
@@ -56,7 +56,7 @@
 <body>
   <h1>Biology MC Quiz </h1>
   <div id="controls">
-    <label for="categoryFilter">分類：</label>
+    <label for="categoryFilter">Topic：</label>
     <select id="categoryFilter" aria-label="Category filter">
       <option value="all" selected>All topic</option>
       <option value="Cell biology">Cell biology</option>
@@ -68,8 +68,8 @@
       <option value="Ecology">Ecology</option>
       <option value="Key ideas">Key ideas</option>
     </select>
-    <button id="prevBtn" type="button">上一題</button>
-    <button id="nextBtn" type="button">下一題</button>
+    <button id="prevBtn" type="button">Previous</button>
+    <button id="nextBtn" type="button">Next</button>
     <button id="shuffleBtn" type="button">重新配題</button>
     <button id="resetBtn" type="button">重設分數</button>
     <span id="counter" class="muted"></span>
@@ -77,7 +77,7 @@
 
   <div id="quiz" class="card" role="region" aria-live="polite">
     <div class="q-header">
-      <span id="catBadge" class="badge">全部</span>
+      <span id="catBadge" class="badge">All</span>
       <span class="score">分數：<span id="scoreText">0</span></span>
     </div>
     <div id="questionText" class="question">載入中…</div>
