--- a/Haysten.html
+++ b/Haysten.html
@@ -113,7 +113,7 @@
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
        <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemfcard.html" target="_blank" rel="noopener">Chemistry Flashcard</a>
-      <a class="subject" href="https://example.com/physics" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
       <!-- Added extra subjects -->
       <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
