--- a/chemquiz.html
+++ b/chemquiz.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chemistry MC Quiz — Mega</title>
+<title>Chemistry MC Quiz</title>
 <style>
   :root{
     --green:#2277cc; --green-2:#4aa3ff; --red:#e05a5a; --bg1:#f0f6ff; --bg2:#e6fffa;
@@ -53,7 +53,7 @@
 </style>
 </head>
 <body>
-  <h1>Chemistry MC Quiz — Mega</h1>
+  <h1>Chemistry MC Quiz</h1>
   <div id="controls">
     <label for="categoryFilter">分類：</label>
     <select id="categoryFilter" aria-label="Category filter">
