--- a/lydia.html
+++ b/lydia.html
@@ -114,8 +114,9 @@
              <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemfcard.html" target="_blank" rel="noopener">Chemistry Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
-      <!-- Added extra subjects -->
-      <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
+       <a class="subject" href="https://missk527.github.io/bio/bio1c.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/1ai.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/1work.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
