--- a/Haysten.html
+++ b/Haysten.html
@@ -119,6 +119,7 @@
       <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
        <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">English Literature</a>
+ <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Econ</a>
     </section>
   </main>
 </body>
