--- a/timothy.html
+++ b/timothy.html
@@ -115,7 +115,7 @@
              <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemfcard.html" target="_blank" rel="noopener">Chemistry Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
-      <a class="subject" href="https://missk527.github.io/bio/bio1c.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/bio/15food.html" target="_blank" rel="noopener">Biology</a>
       <a class="subject" href="https://missk527.github.io/chem/1ai.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/1work.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
