--- a/Haysten.html
+++ b/Haysten.html
@@ -117,9 +117,8 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
       <!-- Added extra subjects -->
       <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
-      <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
-       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">English Literature</a>
- <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Econ</a>
+       <a class="subject" href="https://missk527.github.io/Yenglit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
+      <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Econ</a>
     </section>
   </main>
 </body>
