--- a/jasper.html
+++ b/jasper.html
@@ -119,6 +119,7 @@
       <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
+      <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
     </section>
   </main>
 </body>
