--- a/jasper.html
+++ b/jasper.html
@@ -116,7 +116,7 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemfcard.html" target="_blank" rel="noopener">Chemistry Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
       <!-- Added extra subjects -->
-      <a class="subject" href="https://example.com/biology" target="_blank" rel="noopener">Physics</a>
+        <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
