--- a/timothy.html
+++ b/timothy.html
@@ -116,6 +116,7 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemfcard.html" target="_blank" rel="noopener">Chemistry Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
+      <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
       <a class="subject" href="https://missk527.github.io/bio/15food.html" target="_blank" rel="noopener">Biology</a>
       <a class="subject" href="https://missk527.github.io/chem/1ai.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/1work.html" target="_blank" rel="noopener">Physic</a>
