--- a/phymcquiz.html
+++ b/phymcquiz.html
@@ -38,7 +38,7 @@
 <body>
   <div class="wrap">
     <h1>GCSE Physics MC Quiz — 1000 Questions</h1>
-    <p class="sub">Purple & white theme. Filter by topic, shuffle, and track your score. Click an option to check; explanation appears instantly.</p>
+    <p class="sub"> Filter by topic, shuffle, and track your score. Click an option to check; explanation appears instantly.</p>
 
     <div id="controls">
       <label for="cat">Topic:</label>
