--- a/Haysten.html
+++ b/Haysten.html
@@ -120,7 +120,7 @@
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
        <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
 <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
-      <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Econ</a>
+      <a class="subject" href="https://missk527.github.io/Y11/econmc.html" target="_blank" rel="noopener">Econ</a>
     </section>
   </main>
 </body>
