--- a/lydia.html
+++ b/lydia.html
@@ -117,10 +117,10 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-       <a class="subject" href="https://missk527.github.io/bio/15food.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/1ai.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/1work.html" target="_blank" rel="noopener">Physic</a>
-      <a class="subject" href="https://example.com/mathematics" target="_blank" rel="noopener">Mathematics</a>
+       <a class="subject" href="https://missk527.github.io/bio/16gas.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/2ch.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/2ke.html" target="_blank" rel="noopener">Physic</a>
+      <a class="subject" href="https://missk527.github.io/math/y92.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
 </body>
