--- a/Haysten.html
+++ b/Haysten.html
@@ -110,7 +110,7 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/5wn.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/6wn.html" target="_blank" rel="noopener">English Writing</a>
        <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
        <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
@@ -125,6 +125,7 @@
         <a class="subject" href="https://missk527.github.io/englit/iso.html" target="_blank" rel="noopener">Christmas Carol: Isolation</a>
       <a class="subject" href="https://missk527.github.io/englit/mat.html" target="_blank" rel="noopener">Christmas Carol: Materialism</a>
       <a class="subject" href="https://missk527.github.io/englit/mora.html" target="_blank" rel="noopener">Christmas Carol: Morality</a>
+           <a class="subject" href="https://missk527.github.io/englit/ps.html" target="_blank" rel="noopener">Christmas Carol: Poverty</a>
       <a class="subject" href="https://missk527.github.io/Y11/econmc.html" target="_blank" rel="noopener">Econ</a>
     </section>
   </main>
