--- a/jasper.html
+++ b/jasper.html
@@ -120,11 +120,13 @@
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
       <a class="subject" href="https://missk527.github.io/math/y95.html" target="_blank" rel="noopener">Mathematics</a>
-      <a class="subject" href="https://missk527.github.io/bio/2mi.html" target="_blank" rel="noopener">Biology 1</a>
-         <a class="subject" href="https://missk527.github.io/bio/19bm.html" target="_blank" rel="noopener">Biology 2</a>
+      <a class="subject" href="https://missk527.github.io/bio/51ve.html" target="_blank" rel="noopener">Biology 1</a>
+         <a class="subject" href="https://missk527.github.io/bio/20hd.html" target="_blank" rel="noopener">Biology 2</a>
+        <a class="subject" href="https://missk527.github.io/chem/44fc.html" target="_blank" rel="noopener">Chemistry</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
         <a class="subject" href="https://missk527.github.io/englit/half.html" target="_blank" rel="noopener">IGCSE englit</a>
+      <a class="subject" href="https://missk527.github.io/englit/jk.html" target="_blank" rel="noopener">IGCSE englit 2</a>
     </section>
   </main>
 </body>
