--- a/jasper.html
+++ b/jasper.html
@@ -110,7 +110,8 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/5wn.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/7wn.html" target="_blank" rel="noopener">English Writing</a>
+            <a class="subject" href="https://missk527.github.io/gcse/eng.html" target="_blank" rel="noopener">交英文writing</a>
        <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
        <a class="subject" href="https://missk527.github.io/Y11/biomcquiz.html" target="_blank" rel="noopener">Biology Quiz</a>
@@ -120,13 +121,13 @@
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
       <a class="subject" href="https://missk527.github.io/math/y95.html" target="_blank" rel="noopener">Mathematics</a>
-      <a class="subject" href="https://missk527.github.io/bio/51ve.html" target="_blank" rel="noopener">Biology 1</a>
-         <a class="subject" href="https://missk527.github.io/bio/20hd.html" target="_blank" rel="noopener">Biology 2</a>
-        <a class="subject" href="https://missk527.github.io/chem/44fc.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/bio/52sb.html" target="_blank" rel="noopener">Biology 1</a>
+         <a class="subject" href="https://missk527.github.io/bio/21hd.html" target="_blank" rel="noopener">Biology 2</a>
+        <a class="subject" href="https://missk527.github.io/chem/45rr.html" target="_blank" rel="noopener">Chemistry</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
-        <a class="subject" href="https://missk527.github.io/englit/half.html" target="_blank" rel="noopener">IGCSE englit</a>
-      <a class="subject" href="https://missk527.github.io/englit/jk.html" target="_blank" rel="noopener">IGCSE englit 2</a>
+        <a class="subject" href="https://missk527.github.io/englit/ld.html" target="_blank" rel="noopener">IGCSE englit</a>
+     
     </section>
   </main>
 </body>
