--- a/jasper.html
+++ b/jasper.html
@@ -124,7 +124,7 @@
       <a class="subject" href="https://missk527.github.io/bio/52sb.html" target="_blank" rel="noopener">Biology 1</a>
          <a class="subject" href="https://missk527.github.io/bio/21hd.html" target="_blank" rel="noopener">Biology 2</a>
         <a class="subject" href="https://missk527.github.io/chem/45rr.html" target="_blank" rel="noopener">Chemistry</a>
-       <a class="subject" href="https://missk527.github.io/phy/51vd.html" target="_blank" rel="noopener">Chemistry</a>
+       <a class="subject" href="https://missk527.github.io/phy/51vd.html" target="_blank" rel="noopener">Physics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
         <a class="subject" href="https://missk527.github.io/englit/ld.html" target="_blank" rel="noopener">IGCSE englit</a>
