--- a/lydia.html
+++ b/lydia.html
@@ -123,7 +123,7 @@
       <a class="subject" href="https://missk527.github.io/chem/46rr.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/52a.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y98.html" target="_blank" rel="noopener">Mathematics</a>
-         <a class="subject" href="https://missk527.github.io/englit/iso.html" target="_blank" rel="noopener">Christmas Carol: Isolation</a>
+         <a class="subject" href="https://missk527.github.io/englit/mat.html" target="_blank" rel="noopener">Christmas Carol: Materialism and Wealth</a>
     </section>
   </main>
 </body>
