--- a/jasper.html
+++ b/jasper.html
@@ -121,10 +121,10 @@
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
       <a class="subject" href="https://missk527.github.io/math/y98.html" target="_blank" rel="noopener">Mathematics</a>
-      <a class="subject" href="https://missk527.github.io/bio/54fo.html" target="_blank" rel="noopener">Biology 1</a>
-         <a class="subject" href="https://missk527.github.io/bio/23cc.html" target="_blank" rel="noopener">Biology 2</a>
-        <a class="subject" href="https://missk527.github.io/chem/47rr.html" target="_blank" rel="noopener">Chemistry</a>
-       <a class="subject" href="https://missk527.github.io/phy/53dt.html" target="_blank" rel="noopener">Physics</a>
+      <a class="subject" href="https://missk527.github.io/bio/55ar.html" target="_blank" rel="noopener">Biology 1</a>
+         <a class="subject" href="https://missk527.github.io/bio/24sl.html" target="_blank" rel="noopener">Biology 2</a>
+        <a class="subject" href="https://missk527.github.io/chem/48crr.html" target="_blank" rel="noopener">Chemistry</a>
+       <a class="subject" href="https://missk527.github.io/phy/54vt.html" target="_blank" rel="noopener">Physics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
         <a class="subject" href="https://missk527.github.io/englit/rem.html" target="_blank" rel="noopener">IGCSE englit</a>
