--- a/isaac.html
+++ b/isaac.html
@@ -119,8 +119,7 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-      <a class="subject" href="https://missk527.github.io/bio/25tp.html" target="_blank" rel="noopener">Biology</a>
-       <a class="subject" href="https://missk527.github.io/bio/53ge.html" target="_blank" rel="noopener">Biology 2</a>
+      <a class="subject" href="https://missk527.github.io/bio/54fo.html" target="_blank" rel="noopener">Biology</a>
       <a class="subject" href="https://missk527.github.io/chem/46rr.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/52a.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y912.html" target="_blank" rel="noopener">Mathematics</a>
